force-app/main/default/objects/EPR_Validation_Message__mdt/EPR_Validation_Message__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store error message strings with respect to custom validations defined in triggers and batch for EPR flow</description>
    <label>EPR Validation Message</label>
    <pluralLabel>EPR Validation Messages</pluralLabel>
</CustomObject>