force-app/main/default/objects/EPR_Validation_Message__mdt/fields/Batch_Run_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Batch_Run_Frequency__c</fullName>
    <label>Batch Run Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>