force-app/main/default/objects/EPR_Validation_Message__mdt/fields/SendFailedIPRReport__c.field-meta.xml
<CustomField>
    <fullName>SendFailedIPRReport__c</fullName>
    <description>This field will be used if we want to include any other business person to send the report</description>
    <inlineHelpText>Enter the value for send report to business person else blank</inlineHelpText>
    <label>SendFailedIPRReport</label>
    <type>Email</type>
</CustomField>